# vllm-general-plugin-template

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: vllm-general-plugin-template-copilot-agent.md
src/vllm_general_plugin_template/: __init__.py  launcher.py  plugin.py
tests/: test_launcher.py
